

--------------------------------------------------------------------------------
Version <version> - <codename> released on <releaseDate>

New
- Official Linux 64 bit support (TODO: change documentation and symlink in yum repo)

New Hardware Support
- Cisco Wireless Services Module (WiSM)
- Cisco Integrated Services Routers (ISR) 1800 Series

New Features
- Improved error reporting in the web administration panel and cli (#898, #899)
- @ character now allowed in person id (pid). This is very common in Active 
  Directory environment.
- New admin authentication mechanism added (disabled by default)
- New debugging features (disabled by default)
- New DHCP fingerprints
- Optional backup script in addons/ now archives old records
- Install guide more accurate
- Little improvements (#911)

Bug fixes
- Performance fixes (#908, #910)
- Captive portal stability fixes (#892)
- Mitigated Net::Telnet problems with perl threads (#903, #907)
- Proper violation description shown in violation edit (#922)
- Fixed rare port-security problems with stacked switches or switches with 
  large ifIndex (#921)
- Misc. stability fixes

--------------------------------------------------------------------------------
Version 1.8.7 released on 2010-01-06

Bug fixes
- SECURITY: Fixed "username" Cross-Site Scripting Vulnerability (#884)
- Fixed issues with Aruba Controller (#871, #873)
- Fixed issues with multiple registration in same browser session (#761)
- Fixed issues in some wireless scenarios (#880)
- Fixed situation where a Windows 7 client would slow down captive portal
- Fixed missing dependencies in packetfence-remote-snort-sensor RPM (#881, #882)
- Fixed bad HTML in registration pages
- Clarified some error messages

--------------------------------------------------------------------------------
Version 1.8.6 released on 2009-12-01

New Features
- New iPod UserAgent blocking strings examples
- Snort 2.8.5 compatibility (closes #581, #846, #849)