@@ -58,6 +58,8 @@ Cisco 3550                   |    XX    |    XX    |    XX    |    XX    |
 -----------------------------|----------|----------|----------|----------|
 Cisco 3560                   |    XX    |    XX    |    XX    |    XX    |
 -----------------------------|----------|----------|----------|----------|
+Cisco 3750                   |    XX    |    XX    |    XX    |    XX    |
+-----------------------------|----------|----------|----------|----------|
 Cisco ISR 1800 Series        |    XX    |    --    |    --    |    ??    |
 -----------------------------|----------|----------|----------|----------|
 Dell PowerConnect 3424       |    XX    |    --    |    --    |    --    |
