@@ -27,6 +27,7 @@ BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_2970') }
 BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3500XL') }
 BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3550') }
 BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3560') }
+BEGIN { use_ok('pf::SNMP::Cisco::Catalyst_3750') }
 BEGIN { use_ok('pf::SNMP::Cisco::Controller_4400_4_2_130') }
 BEGIN { use_ok('pf::SNMP::Cisco::ISR_1800') }
 BEGIN { use_ok('pf::SNMP::Cisco::WiSM') }
@@ -92,6 +93,7 @@ my @SNMPobjects = qw(
     pf::SNMP::Cisco::Catalyst_3500XL
     pf::SNMP::Cisco::Catalyst_3550
     pf::SNMP::Cisco::Catalyst_3560
+    pf::SNMP::Cisco::Catalyst_3750
     pf::SNMP::Cisco::Controller_4400_4_2_130
     pf::SNMP::Cisco::ISR_1800
     pf::SNMP::Cisco::WiSM
